# topologicpy

./: .gitattributes  .gitignore  .readthedocs.yaml  Aperture.py  Cell.py  CellComplex.py  Cluster.py  Color.py  Context.py  DGL.py  Dictionary.py  Edge.py  EnergyModel.py  Face.py  Graph.py  Graph_Export.py  Grid.py  HB.py  HM.py  Helper.py  Honeybee.py  InstallDependencies.py  LICENSE  Matrix.py  Neo4j.py  Neo4jGraph.py  OpenFilePath.py  Plotly.py  Polyskel.py  Process.py  README.md  Replication.py  SQL.py  Shell.py  Speckle.py  TopologicPy_Replacement_Backend_Developer_Guide.docx  Topology.py  UnitTest.py  Vector.py  Vertex.py  (+8 more)
3dviewer/: README.md  deploy.bat  deploy.sh  index.html  main.ts  run.bat  run.sh
UnitTesting/: 01Vertex.py  02Edge.py  03Wire.py  04Face.py  05Shell.py  06Cell.py  07CellComplex.py  08Cluster.py  09Topology.py  10Dictionary.py  13Graph.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  specification.html  topologicpy.ANN.html  topologicpy.Aperture.html  topologicpy.BVH.html  topologicpy.CSG.html  topologicpy.Cell.html  topologicpy.CellComplex.html  topologicpy.Cluster.html  topologicpy.Color.html  topologicpy.Context.html  topologicpy.Core.html  topologicpy.DGL.html  topologicpy.Dictionary.html  topologicpy.Edge.html  topologicpy.EnergyModel.html  topologicpy.Face.html  topologicpy.GA.html  topologicpy.GQL.html  topologicpy.Graph.html  topologicpy.GraphDB.html  topologicpy.GraphRAG.html  topologicpy.Grid.html  topologicpy.Helper.html  topologicpy.Honeybee.html  topologicpy.IFC.html  topologicpy.Kuzu.html  topologicpy.LLM.html  topologicpy.Matrix.html  topologicpy.Neo4j.html  topologicpy.Ontology.html  topologicpy.Plotly.html  topologicpy.Polyskel.html  (+12 more)
notebooks/: ACADIA23_BuildingGenerator.ipynb  ACADIA23_GraphCSVImport.ipynb  ANN-new.ipynb  AdjacentVerticesByCompassDirection.ipynb  AlignVertices.ipynb  BVH.ipynb  Betweenness_Centrality.ipynb  Boundary.dxf  CSG.ipynb  Chessboard.ipynb  CombinatorialSubComponents.ipynb  CommunityDetection.ipynb  Edge_Face_Metrics.ipynb  EnergyModel.ipynb  ExportToGLB.ipynb  FaceByOffsetArea.ipynb  GA.ipynb  GQL.ipynb  GraphBooleans.ipynb  GraphByIFCPath.ipynb  GraphGrammars.ipynb  GraphIsomrphismMatching.ipynb  GraphRAG01.ipynb  GraphRAG03.ipynb  GraphViz.ipynb  Graph_Bridges_Cuts.ipynb  Graph_Partition.ipynb  Graph_TGraph_NetworkX_Benchmark.ipynb  IFC_Explainable_Semantic_Building_Graph_Tutorial.ipynb  IFC_SpatialRelationshipsGraph.ipynb  Isovist_Metrics.ipynb  Kuzu.ipynb  MEP01.ipynb  MEP02.ipynb  MSD.ipynb  MSD02.ipynb  NEO4J_House_Export.ipynb  Neo4j.ipynb  PDF_Import.ipynb  PrincipalAxis_CanonicalMatrix.ipynb  (+22 more)
ontology/: topologicpy.ttl
resources/: README.md  edges.csv  house_2024_05_27.ttl  topologicpy.ttl
tests/: 01Vertex.py  02Edge.py  03Wire.py  04Face.py  05Shell.py  06Cell.py  07CellComplex.py  08Cluster.py  09Topology.py  10Dictionary.py  11Grid.py  12Matrix.py  13Graph.py  14Vector.py  desktop.ini  temp-plot.html  test_01Vertex.py  test_02Edge.py  test_03Wire.py  test_04Face.py  test_05Shell.py  test_06Cell.py  test_07CellComplex.py  test_08Cluster.py  test_09Topology.py  test_10Dictionary.py  test_11Grid.py  test_12Matrix.py  test_13Graph.py  test_14Vector.py  test_15Speckle.py  test_16EnergyModel.py
topologicpy-0.7.12-py3-none-any.whl/: topologicpy-0.7.12-py3-none-any.whl
topologicpy-0.7.14-py3-none-any.whl/: topologicpy-0.7.14-py3-none-any.whl
topologicpy-0.7.15-py3-none-any.whl/: topologicpy-0.7.15-py3-none-any.whl
topologicpy-0.7.17-py3-none-any.whl/: topologicpy-0.7.17-py3-none-any.whl
topologicpy-0.7.18-py3-none-any.whl/: topologicpy-0.7.18-py3-none-any.whl
topologicpy-0.7.19-py3-none-any.whl/: topologicpy-0.7.19-py3-none-any.whl
topologicpy-0.7.20-py3-none-any.whl/: topologicpy-0.7.20-py3-none-any.whl
topologicpy-0.7.21-py3-none-any.whl/: topologicpy-0.7.21-py3-none-any.whl
topologicpy-0.7.22-py3-none-any.whl/: topologicpy-0.7.22-py3-none-any.whl
topologicpy-0.7.23-py3-none-any.whl/: topologicpy-0.7.23-py3-none-any.whl
topologicpy-0.7.24-py3-none-any.whl/: topologicpy-0.7.24-py3-none-any.whl
topologicpy-0.7.26-py3-none-any.whl/: topologicpy-0.7.26-py3-none-any.whl
topologicpy-0.7.27-py3-none-any.whl/: topologicpy-0.7.27-py3-none-any.whl
topologicpy-0.7.28-py3-none-any.whl/: topologicpy-0.7.28-py3-none-any.whl
topologicpy-0.7.29-py3-none-any.whl/: topologicpy-0.7.29-py3-none-any.whl
topologicpy-0.7.30-py3-none-any.whl/: topologicpy-0.7.30-py3-none-any.whl
topologicpy-0.7.34-py3-none-any.whl/: topologicpy-0.7.34-py3-none-any.whl
topologicpy-0.7.36-py3-none-any.whl/: topologicpy-0.7.36-py3-none-any.whl
topologicpy-0.7.37-py3-none-any.whl/: topologicpy-0.7.37-py3-none-any.whl
topologicpy-0.7.38-py3-none-any.whl/: topologicpy-0.7.38-py3-none-any.whl
topologicpy-0.7.39-py3-none-any.whl/: topologicpy-0.7.39-py3-none-any.whl
topologicpy-0.7.40-py3-none-any.whl/: topologicpy-0.7.40-py3-none-any.whl
topologicpy-0.7.41-py3-none-any.whl/: topologicpy-0.7.41-py3-none-any.whl
topologicpy-0.7.42-py3-none-any.whl/: topologicpy-0.7.42-py3-none-any.whl
topologicpy-0.7.43-py3-none-any.whl/: topologicpy-0.7.43-py3-none-any.whl
topologicpy-0.7.44-py3-none-any.whl/: topologicpy-0.7.44-py3-none-any.whl
(+371 files in other folders)
